Prevent absolutely positioned child elements from messing up overflow rules (#197)

--- a/packages/expandable-section/src/scss/styles.scss
+++ b/packages/expandable-section/src/scss/styles.scss
@@ -13,6 +13,7 @@
     transition-property: height, margin-bottom, visibility;
     transition-timing-function: ease-in-out;
     margin-bottom: 0;
+    position: relative;
   }
 
   &__expand[aria-expanded="true"] + .expandable-section__content {
